トップページ変更

--- a/ideas/item1.html
+++ b/ideas/item1.html
@@ -46,7 +46,7 @@
      </main>
      <hr>
      <footer>
-       <a href="../index.html">アイデアシートに戻る</a>
+       <a href="../ideas.html">アイデアシートに戻る</a>
      </footer>
   </body>
 </html>
