画像サイズ変更

--- a/ideas/item1.html
+++ b/ideas/item1.html
@@ -24,7 +24,7 @@
        </p>
        <hr>
        <h3>ダーティープロトタイピング</h3>
-       <img style="width: 400px; height: 250px" src="../images/image9.png" alt="example">
+       <img style="width: 600px; height: auto" src="../images/image9.png" alt="example">
        <h4 style="margin-bottom: 0;">参考事例の商品</h4>
        <h5 style="margin-top: 0;">Example</h5>
        <p>平林くんからの質問</p>
