--- a/index.html
+++ b/index.html
@@ -2,69 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>瀧澤悠のホームページ</title>
+    <title>Harukatakizawa</title>
     <link rel="stylesheet" href="./assets/stylesheet/stylesheet.css">
   </head>
   <body>
-    <!-- ヘッター -->
-    <div class="header-area">
-      <!-- ヘッターボーダー -->
-      <div class="border">
-        <h1>授業記事</h1>
+    <header>
+      <div class="lessons">
+        <a href="./lessons/xtd-appli1/xtd-appli1.html">XtD Application:1</a>
+        <a href="./lessons/xtd-appli2/xtd-appli2.html">XtD Application:2</a>
+        <a style="white-space: nowrap;" href="./lessons/etb1/etb1.html">Emerging Technology Basis:1</a>
       </div>
-      <!-- ヘッターネーム -->
-      <div class="name">
-        <h1>HARUKA</h1>
-        <h2>Takizawa</h2>
+    </header>
+    <main class="main">
+      <img style="width: 250px" src="./assets/images/imag1.jpg">
+      <div class="text-profile">
+        <h3 style="margin-top: 20px; font-size: 20px;">HARUKA TAKZIAWA</h3>
+        <p style="margin-top: 20px;">Kyoto University of Art and Design.</p>
+        <p>X-Tech Design.</p>
+        <p>I like music on future bass.</p>
+        <a href="https://twitter.com/_hrktkzw_"><img src="./assets/images/twitter.png" alt="photo"></a>
+        <a href="https://instagram.com/hrktkzw"><img src="./assets/images/instagram.png" alt="photo"></a>
+        <a href="https://facebook.com/hrktkzw.jp"><img style="margin-right: 80px; width: 11px;" src="./assets/images/facebook.png" alt="photo"></a>
+        <hr style="margin-left: 18px">
+        <p style="margin-left: 30px; font-size: 13px; color: #d8d8d8;">© 2019 HARUKATAKIZAWA</p>
       </div>
-    </div>
-    <!-- 最新記事•プロフィールエリア -->
-    <div class="new-posts-and-profile-area">
-      <div class="new-posts">
-        <!-- 最新記事1 -->
-          <article class="new-post">
-            <a href="./items/unity_wip/sessions.html">
-              <div class="border">
-                <img src="./assets/images/image12.png" alt="写真">
-                <h2>技術応用演習1課題</h2>
-          </article>
-        <!-- 最新記事２ -->
-          <article class="new-post">
-            <a href="./items/ideas/ideas.html">
-              <div class="border">
-                <img src="./assets/images/image9.png" alt="写真">
-                <h2>クロステック応用1課題</h2>
-              </div>
-          </article>
-        <!-- 最新記事３ -->
-          <article class="new-post">
-            <a href="./items/posts/post1.html">
-              <div class="border">
-                <img src="./assets/images/image13.jpg" alt="写真">
-                <h2>prototype進捗</h2>
-              </div>
-            </a>
-          </article>
-      </div>
-      <!-- プロフィール -->
-      <div class="profile">
-        <img src="./assets/images/image2.png" alt="写真">
-        <h1>瀧澤 悠</h1>
-        <h2>タキザワ ハルカ</h2>
-        <div class="border"></div>
-        <h3 class="university">京都造形芸術大学</h3>
-        <h3 class="faculty">x-tech design</h3>
-      </div>
-    </div>
-    <!-- フッター -->
-    <footer>
-      <div class="footer-area">
-        <div class="footer">
-          <div class="border"></div>
-          <h3>Copyright © Haruka Takizawa. All Rights Reserved.</h3>
-          <div class="border"></div>
-        </div>
-      </div>
-    </footer>
+    </main>
   </body>
 </html>
