--- a/index.html
+++ b/index.html
@@ -6,25 +6,23 @@
     <link rel="stylesheet" href="./assets/stylesheet/stylesheet.css">
   </head>
   <body>
-    <header>
-      <div class="lessons">
-        <a href="./lessons/xtd-appli1/xtd-appli1.html">XtD Application:1</a>
-        <a href="./lessons/xtd-appli2/xtd-appli2.html">XtD Application:2</a>
-        <a style="white-space: nowrap;" href="./lessons/etb1/etb1.html">Emerging Technology Basis:1</a>
-      </div>
+    <header class="lessons">
+      <p><a href="./lessons/xtd-appli1/xtd-appli1.html">XtD Application:1</a></p>
+      <p><a href="./lessons/xtd-appli2/xtd-appli2.html">XtD Application:2</a></p>
+      <p><a style="white-space: nowrap;" href="./lessons/etb1/etb1.html">Emerging Technology Basis:1</a></p>
     </header>
     <main class="main">
-      <img style="width: 250px" src="./assets/images/imag1.jpg">
+      <img style="width: 400px" src="./assets/images/imag1.jpg">
       <div class="text-profile">
-        <h3 style="margin-top: 20px; font-size: 20px;">HARUKA TAKZIAWA</h3>
+        <h3 style="margin-top: 20px;">HARUKA TAKZIAWA</h3>
         <p style="margin-top: 20px;">Kyoto University of Art and Design.</p>
         <p>X-Tech Design.</p>
         <p>I like music on future bass.</p>
         <a href="https://twitter.com/_hrktkzw_"><img src="./assets/images/twitter.png" alt="photo"></a>
         <a href="https://instagram.com/hrktkzw"><img src="./assets/images/instagram.png" alt="photo"></a>
-        <a href="https://facebook.com/hrktkzw.jp"><img style="margin-right: 80px; width: 11px;" src="./assets/images/facebook.png" alt="photo"></a>
-        <hr style="margin-left: 18px">
-        <p style="margin-left: 30px; font-size: 13px; color: #d8d8d8;">© 2019 HARUKATAKIZAWA</p>
+        <a href="https://facebook.com/hrktkzw.jp"><img style="margin-right: 80px; width: 13.3px;" src="./assets/images/facebook.png" alt="photo"></a>
+        <hr style="width: 300px; margin-left: 30px">
+        <p style="margin-left: 85px; font-size: 13px; color: #d8d8d8;">© 2019 HARUKATAKIZAWA</p>
       </div>
     </main>
   </body>
