--- a/lessons/xtd-appli1/xtd-appli1.html
+++ b/lessons/xtd-appli1/xtd-appli1.html
@@ -14,6 +14,8 @@
         <ul>
           <li>DummyPage:1<a href="./idea1.html"> Idea</a></li>
           <li>DummyPage:2<a href="./idea2.html"> Idea</a></li>
+          <li>2wayメガネ<a href="./productOnGlass.html">商品紹介</a></li>
+          <li>2wayメガネ<a href="#">製作過程</a></li>
         </ul>
       </div>
     </main>
