--- a/lessons/xtd-appli1/productOnGlass.html
+++ b/lessons/xtd-appli1/productOnGlass.html
@@ -10,7 +10,7 @@
     </header>
     <hr>
     <main>
-      <img style="width: 400px;" src="../../assets/images/image3.jpg" alt="phot">
+      <img style="width: 400px;" src="../../assets/images/image3.jpg" alt="photo">
       <h3>商品コンセプト</h3>
       <p style="display: inline-block; text-align: left; margin: 0;">
         僕が作った2wayメガネのコンセプトは、メガネクリーナーを持ち合わせていなくてもメガネを<br>
@@ -24,6 +24,10 @@
         おり、簡単にメガネを拭くとこができます。<br>
         <br>
         クリーナー本体の中央部分を持ちながら両サイドでレンズを挟み、左右に拭き取ります。
+        <br>
+        <img width="225" src="../../assets/images/image4.jpg" alt="photo">
+        <img width="225" src="../../assets/images/image5.JPG" alt="photo">
+        <img width="225" src="../../assets/images/image6.JPG" alt="photo">
       </p>
       <hr>
       <h3>ターゲットユーザー</h3>
@@ -37,6 +41,8 @@
         <source src="../../assets/videos/video1.MOV"></source>
       </video>
     </main>
-    <footer></footer>
+    <footer style="margin: 20px 0;">
+      <a href="../../index.html">Return</a>
+    </footer>
   </body>
 </html>
