--- a/lessons/xtd-appli1/productOnGlass.html
+++ b/lessons/xtd-appli1/productOnGlass.html
@@ -25,7 +25,7 @@
         <br>
         クリーナー本体の中央部分を持ちながら両サイドでレンズを挟み、左右に拭き取ります。
         <br>
-        <img width="225" src="../../assets/images/image4.jpg" alt="photo">
+        <img width="225" src="../../assets/images/image4.JPG" alt="photo">
         <img width="225" src="../../assets/images/image5.JPG" alt="photo">
         <img width="225" src="../../assets/images/image6.JPG" alt="photo">
       </p>
