--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="https://instagram.com/hrktkzw"><img src="./assets/images/instagram.png" alt="photo"></a>
         <a href="https://facebook.com/hrktkzw.jp"><img style="margin-right: 80px; width: 13.3px;" src="./assets/images/facebook.png" alt="photo"></a>
         <hr style="background-color: gray; border: none; width: 300px; height: 1px; margin-left: 30px;">
-        <p style="margin-left: 85px; font-size: 13px; color: #d8d8d8;">© 2019 HARUKATAKIZAWA</p>
+        <p style="margin-top: 10px; margin-left: 85px; font-size: 13px; color: #d8d8d8;">© 2019 HARUKATAKIZAWA</p>
       </div>
     </main>
   </body>
