--- a/lessons/xtd-appli1/productOnGlass.html
+++ b/lessons/xtd-appli1/productOnGlass.html
@@ -42,7 +42,7 @@
       </video>
     </main>
     <footer style="margin: 20px 0;">
-      <a href="../../index.html">Return</a>
+      <a href="./xtd-appli1.html">Return</a>
     </footer>
   </body>
 </html>
