--- a/lessons/etb1/etb1.html
+++ b/lessons/etb1/etb1.html
@@ -6,15 +6,15 @@
   </head>
   <body>
     <header>
-      <p>Emerging Technology Basis:1</p>
+      <p>Emerging Technology Basis1</p>
     </header>
     <hr class="hr">
     <main>
       <div class="contents">
         <ul>
-          <li>Session:1<a href="./session1.html"> VR Development</a></li>
-          <li>Session:2<a href="./session2.html"> Drone Control</a></li>
-          <li>Session:3<a style="white-space: nowrap;"  href="./session3.html"> IoT Product Prototyping</a></li>
+          <li>Session1:<a href="./session1.html"> VR Development</a></li>
+          <li>Session2:<a href="./session2.html"> Drone Control</a></li>
+          <li>Session3:<a style="white-space: nowrap;"  href="./session3.html"> IoT Product Prototyping</a></li>
         </ul>
       </div>
     </main>
