--- a/lessons/xtd-appli1/xtd-appli1.html
+++ b/lessons/xtd-appli1/xtd-appli1.html
@@ -6,16 +6,16 @@
   </head>
   <body>
     <header>
-      <p>XtD Application:1</p>
+      <p>XtD Application1</p>
     </header>
     <hr class="hr">
     <main>
       <div class="contents">
         <ul>
-          <li>DummyPage:1<a href="./idea1.html"> Idea</a></li>
-          <li>DummyPage:2<a href="./idea2.html"> Idea</a></li>
-          <li>2wayメガネ<a href="./productOnGlass.html">商品紹介</a></li>
-          <li>2wayメガネ<a href="./productionProcess.html">製作過程</a></li>
+          <li>DummyPage1:<a href="./idea1.html"> Idea</a></li>
+          <li>DummyPage2:<a href="./idea2.html"> Idea</a></li>
+          <li>2wayメガネ:<a href="./productOnGlass.html">商品紹介</a></li>
+          <li>2wayメガネ:<a href="./productionProcess.html">製作過程</a></li>
         </ul>
       </div>
     </main>
