--- a/lessons/xtd-appli2/xtd-appli2.html
+++ b/lessons/xtd-appli2/xtd-appli2.html
@@ -6,13 +6,14 @@
   </head>
   <body>
     <header>
-      <p>XtD Application:2</p>
+      <p>XtD Application2</p>
       <hr class="hr">
     </header>
     <main>
       <div class="contents">
         <ul>
-          <li>3DPrint<a href="./post1.html"> Prototype wip</a></li>
+          <li>3DPrint:<a href="./post1.html"> Prototype wip</a></li>
+          <li>Hacking:<a href="./hackingProduct.html">Prototypeing</a></li>
         </ul>
       </div>
     </main>
