change twitter id

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p style="margin-top: 20px;">Kyoto University of Art and Design.</p>
         <p>X-Tech Design.</p>
         <p>I like music on future bass.</p>
-        <a href="https://twitter.com/_hrktkzw_"><img src="./assets/images/twitter.png" alt="photo"></a>
+        <a href="https://twitter.com/harukatakizawa"><img src="./assets/images/twitter.png" alt="photo"></a>
         <a href="https://instagram.com/hrktkzw"><img src="./assets/images/instagram.png" alt="photo"></a>
         <a href="https://facebook.com/hrktkzw.jp"><img style="margin-right: 80px; width: 13.3px;" src="./assets/images/facebook.png" alt="photo"></a>
         <hr style="background-color: gray; border: none; width: 300px; height: 1px; margin-left: 30px;">
