--- a/index.html
+++ b/index.html
@@ -2,27 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Harukatakizawa</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1 user-scalable=0" >
     <link rel="stylesheet"　type="text/scss" href="./assets/stylesheet/stylesheet.css">
+    <title>HarukaTakizawa</title>
   </head>
   <body>
     <div class="lessons">
-      <p><a href="./lessons/xtd-appli1/xtd-appli1.html">XtD Application:1</a></p>
-      <p><a href="./lessons/xtd-appli2/xtd-appli2.html">XtD Application:2</a></p>
-      <p><a style="white-space: nowrap;" href="./lessons/etb1/etb1.html">Emerging Technology Basis:1</a></p>
+      <div class="lessons-inner">
+        <p style="padding: 0;"><a href="./lessons/xtd-appli1/xtd-appli1.html">XtD Application:1</a></p>
+        <p><a href="./lessons/xtd-appli2/xtd-appli2.html">XtD Application:2</a></p>
+        <p><a style="white-space: nowrap;" href="./lessons/etb1/etb1.html">Emerging Technology Basis:1</a></p>
+      </div>
     </div>
     <div class="main">
-      <img style="width: 400px" src="./assets/images/imag1.jpg">
+      <img class="profile-image" src="./assets/images/imag1.jpg">
       <div class="text-profile">
-        <h3 style="margin-top: 20px;">HARUKA TAKZIAWA</h3>
+        <h3 class="profile-name">HARUKA TAKZIAWA</h3>
         <p style="margin-top: 20px;">Kyoto University of Art and Design.</p>
         <p>X-Tech Design.</p>
         <p>I like music on emotional sound.</p>
-        <a href="https://twitter.com/harukatakizawa"><img src="./assets/images/twitter.png" alt="photo"></a>
-        <a href="https://instagram.com/hrktkzw"><img src="./assets/images/instagram.png" alt="photo"></a>
-        <a href="https://facebook.com/hrktkzw.jp"><img style="margin-right: 80px; width: 13.3px;" src="./assets/images/facebook.png" alt="photo"></a>
-        <hr style="background-color: gray; border: none; width: 300px; height: 1px; margin-left: 30px;"/>
-        <p style="margin-top: 10px; margin-left: 85px; font-size: 13px; color: #d8d8d8;">© 2019 HARUKATAKIZAWA</p>
+        <div class="links">
+          <a href="https://twitter.com/harukatakizawa"><img src="./assets/images/twitter.png" alt="photo"></a>
+          <a href="https://instagram.com/hrktkzw"><img src="./assets/images/instagram.png" alt="photo"></a>
+          <a href="https://facebook.com/hrktkzw.jp"><img style="margin-right: 80px; width: 13.3px;" src="./assets/images/facebook.png" alt="photo"></a>
+        </div>
+        <hr class="profile-hr"/>
+        <div class="footer-name">© 2019 HARUKATAKIZAWA</div>
       </div>
     </div>
   </body>
