--- a/lessons/xtd-appli2/post1.html
+++ b/lessons/xtd-appli2/post1.html
@@ -3,6 +3,7 @@
   <head>
     <title>prototype_wip</title>
     <link rel="stylesheet" href="../../assets/stylesheet/stylesheet.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1 user-scalable=0" >
   </head>
   <body class="post1_body">
     <header class="post1_header">
