--- a/lessons/etb1/session2.html
+++ b/lessons/etb1/session2.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>VR_Development</title>
     <link rel="stylesheet" href="../../assets/stylesheet/stylesheet.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1 user-scalable=0" >
   </head>
   <body>
     <header>
