--- a/lessons/xtd-appli1/productOnGlass.html
+++ b/lessons/xtd-appli1/productOnGlass.html
@@ -3,6 +3,7 @@
   <head>
     <title>Product on Glass</title>
     <link rel="stylesheet" href="../../assets/stylesheet/stylesheet.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1 user-scalable=0" >
   </head>
   <body>
     <header>
