--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="https://facebook.com/hrktkzw.jp"><img style="margin-right: 80px; width: 13.3px;" src="./assets/images/facebook.png" alt="photo"></a>
         </div>
         <hr class="profile-hr"/>
-        <div class="footer-name">© 2019 HARUKATAKIZAWA</div>
+        <h1 class="footer-name">© 2019 HARUKATAKIZAWA</h1>
       </div>
     </div>
   </body>
