--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h3 class="profile-name">HARUKA TAKZIAWA</h3>
         <p style="margin-top: 20px;">Kyoto University of Art and Design.</p>
         <p>X-Tech Design.</p>
-        <p>I like music on emotional sound.</p>
+        <p>I like music on Future Bass✨</p>
         <div class="links">
           <a href="https://twitter.com/harukatakizawa"><img src="./assets/images/twitter.png" alt="photo"></a>
           <a href="https://instagram.com/hrktkzw"><img src="./assets/images/instagram.png" alt="photo"></a>
